# web

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-ed1115cda91d7859c28b4cfc2cc3ecbbba0025b9f27c110aa65692bc18ffab70.json
chat-agent/: Cargo.toml
chat-agent/src/: channel.rs  lib.rs  relay.rs
chat-history/: Cargo.toml
chat-history/src/: content.rs  history.rs  journal.rs  lib.rs  project.rs  session.rs
chat-relay/: Cargo.toml
chat-relay/src/: agent.rs  lib.rs  settings.rs
chat-settings/: Cargo.toml
chat-settings/src/: lib.rs
common/: Cargo.toml
common/src/: lib.rs
download/: Cargo.toml
download/src/: file.rs  zip.rs
firecracker-client/: Cargo.toml
firecracker-client/src/: action.rs  boot_source.rs  drive.rs  http.rs  lib.rs  machine_config.rs  mmds.rs  network.rs
firecracker-manager/: Cargo.toml
firecracker-manager/src/: cleanup.rs  configure.rs  lib.rs  mmds_iam.rs  network.rs  process.rs  vm.rs
frontend/: check_app.cjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  index.tsx  oauth-close.js  types.ts
frontend/src/components/: AskUserQuestionPanel.tsx  ChatComposer.tsx  ChatInterface.tsx  ChatMessagesPane.tsx  ClaudeStatus.tsx  CommandPalette.tsx  FileManager.tsx  IconRail.tsx  MessageComponent.tsx  MessageCopyControl.tsx  MessageErrorBoundary.tsx  MessageSearch.tsx  MobileNav.tsx  ModelChip.tsx  PlanApprovalCard.tsx  QueueDrawer.tsx  QuickSettingsPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SkillsPanel.tsx  SubAgentCard.tsx  TaskWidget.tsx  Terminal.tsx  ToolDiffViewer.tsx  ToolRenderer.tsx  WorktreeBadge.tsx
frontend/src/contexts/: SseContext.tsx
frontend/src/hooks/: useChatState.ts  useConversations.ts  useQuestionStorage.ts  useSseHandlers.ts  useUiPreferences.ts
frontend/src/utils/: runningTasks.ts  safeJson.ts  sse.ts  transcript.ts
frontend/tests/: accessibility-and-edge-cases.spec.ts  assistant-card.spec.ts  assistant-response.spec.ts  audit-fixes.spec.ts  chat.spec.ts  code-quality.spec.ts  composer.spec.ts  conversation-history-load.spec.ts  conversation-switching.spec.ts  copy-button.spec.ts  csrf.spec.ts  disconnect.spec.ts  drag-drop.spec.ts  error-handling.spec.ts  file-download.spec.ts  file-path-links.spec.ts  files.spec.ts  font-size.spec.ts  gateway-settings.spec.ts  image-attachment.spec.ts  keyboard-shortcuts.spec.ts  markdown.spec.ts  mcp-servers.spec.ts  message-persistence.spec.ts  message-queue.spec.ts  mobile-responsive.spec.ts  model-chip.spec.ts  navigation.spec.ts  new-chat-while-running.spec.ts  pending-session.spec.ts  question-panel.spec.ts  quick-settings.spec.ts  reconnect.spec.ts  reset.spec.ts  security.spec.ts  session.spec.ts  settings.spec.ts  sidebar-search.spec.ts  sign-out.spec.ts  staleness-and-question-recovery.spec.ts  (+5 more)
frontend/tests/helpers/: setup.ts
migrations/: 001_init.sql
net-helper/: Cargo.toml
net-helper/src/: main.rs
rootfs/: agent.py  agent.service  claude-update.service  test_agent.py
rootfs/skills/commit/: SKILL.md
rootfs/skills/diff/: SKILL.md
rootfs/skills/memory/: SKILL.md
rootfs/skills/plan/: SKILL.md
rootfs/skills/review/: SKILL.md
scripts/: build_rootfs.py  migrate_rootfs.sh  patch_rootfs.py
server/: Cargo.toml  build.rs
server/src/: auth.rs  chat.rs  csrf.rs  download.rs  files.rs  gateway_auth.rs  gateway_callback.rs  handlers.rs  http_client.rs  main.rs  mcp.rs  mcp_oauth.rs  memory.rs  settings.rs  skills.rs  state.rs  static_files.rs  templates.rs  terminal.rs  test_helpers.rs  upload.rs
sftp-client/: Cargo.toml
sftp-client/src/: lib.rs
ssh-client/: Cargo.toml
ssh-client/src/: lib.rs
store/: Cargo.toml  spec.md
store/src/: lib.rs  user.rs
upload/: Cargo.toml
upload/src/: lib.rs
vm-lifecycle/: Cargo.toml
vm-lifecycle/src/: iam.rs  lib.rs  mmds.rs  rootfs.rs  sweep.rs  vm_config.rs
