[package]
name = "chat-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
chrono = "0.4.44"
futures = "0.3.32"
russh = "0.59.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ssh-client = { path = "../ssh-client"}
tokio = { version = "1.51.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tracing = "0.1.44"
