[package]
name = "chat-history"
version = "0.1.0"
edition = "2024"

[dependencies]
ssh-client = { path = "../ssh-client" }
sftp-client = { path = "../sftp-client" }
anyhow = "1.0.102"
futures = "0.3"
russh-sftp = "2.1.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
