[package]
name = "firecracker-client"
version = "0.1.0"
description = "HTTP client for the Firecracker microVM management API over a Unix socket"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["net"] }
