[package]
name = "firecracker-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
common = { path = "../common" }
ipnetwork = "0.21.1"
macaddr = "1.0.1"
chrono = "0.4.44"
firecracker-client = { path = "../firecracker-client" }
nix = { version = "0.31.2", features = ["signal", "user", "fs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["fs", "process", "time"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
toml = "1.0.7"
uuid = { version = "1.22.0", features = ["v4"] }
