[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
bytes = "1.11.1"
chat-history = { git = "https://github.com/llm-proxy-rs/web" }
chat-agent = { path = "../chat-agent" }
chat-settings = { path = "../chat-settings" }
chrono = { version = "0.4", features = ["serde"] }
common = { path = "../common" }
config = "0.15.19"
download = { git = "https://github.com/llm-proxy-rs/web" }
firecracker-manager = { git = "https://github.com/llm-proxy-rs/web" }
futures = "0.3.32"
handlers = { git = "https://github.com/llm-proxy-rs/cognito.git", version = "0.1.0" }
russh = "0.57.1"
russh-sftp = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sftp-client = { git = "https://github.com/llm-proxy-rs/web" }
ssh-client = { git = "https://github.com/llm-proxy-rs/web" }
store = { path = "../store" }
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-sessions = "0.15.0"
tower-sessions-sqlx-store = { git = "https://github.com/llm-proxy-rs/tower-sessions-stores.git", version = "0.15.0", features = ["postgres"] }
upload = { git = "https://github.com/llm-proxy-rs/web" }
uuid = { version = "1.22.0", features = ["v4"] }
vm-lifecycle = { path = "../vm-lifecycle" }
zip = "2"
