[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["multipart", "ws"] }
base64 = "0.22.1"
bytes = "1.11.1"
chat-agent = { path = "../chat-agent" }
chat-history = { path = "../chat-history" }
chat-settings = { path = "../chat-settings" }
chrono = { version = "0.4.44", features = ["serde"] }
common = { path = "../common" }
config = "0.15.22"
download = { path = "../download" }
firecracker-manager = { path = "../firecracker-manager" }
futures = "0.3.32"
handlers = { git = "https://github.com/llm-proxy-rs/cognito.git" }
authorize = { git = "https://github.com/llm-proxy-rs/cognito.git" }
token = { git = "https://github.com/llm-proxy-rs/cognito.git" }
hex = "0.4.3"
html-escape = "0.2.13"
rand = "0.9.2"
reqwest = { version = "0.13.2", features = ["json"] }
russh = "0.59.0"
russh-sftp = "2.1.1"
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sftp-client = { path = "../sftp-client" }
sha2 = "0.11.0"
ssh-client = { path = "../ssh-client" }
store = { path = "../store" }
subtle = "2.6.1"
time = { version = "0.3.47", features = ["formatting"] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-sessions = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres"] }
tower-sessions-sqlx-store = { git = "https://github.com/llm-proxy-rs/tower-sessions-stores.git", version = "0.15.0", features = ["postgres"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
upload = { path = "../upload" }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
vm-lifecycle = { path = "../vm-lifecycle" }
zip = "8.4.0"
