[package]
name = "store"
version = "0.1.0"
description = "PostgreSQL persistence layer for user accounts"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "time"] }
time = "0.3"
uuid = { version = "1.22.0", features = ["v4"] }
