[package]
name = "vm-lifecycle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
common = { path = "../common" }
aws-config = "1.8.15"
aws-credential-types = "1.2.14"
firecracker-manager = { git = "https://github.com/llm-proxy-rs/web" }
serde_json = "1.0.149"
chrono = "0.4"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v4"] }
