[package]
name = "vm-lifecycle"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.15"
aws-credential-types = "1.2.14"
chrono = "0.4.44"
common = { path = "../common" }
firecracker-manager = { path = "../firecracker-manager" }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4"] }
